@@ -65,6 +65,8 @@ Sub::Identify = 0
 
 [OurPkgVersion]
 
+[TravisYML]
+
 ; Not using PodWeaver for now. Things like copyrights are a bit hard.
 ; [PodWeaver]
 
